Fleshed out the configuration section of the getting started guide.
* Complete first cut of configuration section.
* Lay out the next two sections.